--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
   },
   "homepage": "https://github.com/leidyvalencia77/Proyecto_ciclo_4#readme",
   "dependencies": {
+    "apollo-server": "^3.5.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
+    "express-graphiql-middleware": "^1.0.4",
+    "graphql": "^15.7.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
   },
