Realizacion de HU: 012 y 023

--- a/variables.env
+++ b/variables.env
@@ -4,4 +4,9 @@ SECRET_JWT=gpi-secret-key
 
 EXPIRATION_JWT=86400
 
+ROLE_LEADER=LÍDER
+
+ROLE_STUDENT=ESTUDIANTE
+
 DB_MONGO=mongodb+srv://usr_admin_gpi:usr_admin_gpi01-@cluster0.7wq7c.mongodb.net/gpi_db?retryWrites=true&w=majority
+
