added admin role like environment variable

--- a/variables.env
+++ b/variables.env
@@ -8,5 +8,6 @@ ROLE_LEADER=LÍDER
 
 ROLE_STUDENT=ESTUDIANTE
 
-DB_MONGO=mongodb+srv://usr_admin_gpi:usr_admin_gpi01-@cluster0.7wq7c.mongodb.net/gpi_db?retryWrites=true&w=majority
+ROLE_ADMIN=ADMINISTRADOR
 
+DB_MONGO=mongodb+srv://usr_admin_gpi:usr_admin_gpi01-@cluster0.7wq7c.mongodb.net/gpi_db?retryWrites=true&w=majority
